--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,10 +19,7 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx"],
-      "parser": "@typescript-eslint/parser",
-      "rules": {
-        "@typescript-eslint/no-explicit-any": "off"
-      }
+      "parser": "@typescript-eslint/parser"
     }
   ]
 }
