--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "remark-math": "^6.0.0",
     "sonner": "^1.3.1",
     "uuid": "^9.0.1",
+    "xml2js": "^0.6.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -110,6 +111,7 @@
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.11",
     "@types/uuid": "^9.0.7",
+    "@types/xml2js": "^0.4.14",
     "autoprefixer": "^10.4.16",
     "clsx": "^2.0.0",
     "eslint": "^8",
