--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Chatbot UI",
-  "name": "Chatbot UI",
+  "short_name": "LabForty AI",
+  "name": "LabForty AI",
   "icons": [
     {
       "src": "/icon-192x192.png",
