--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@anthropic-ai/sdk": "^0.18.0",
     "@apidevtools/json-schema-ref-parser": "^11.1.0",
     "@azure/openai": "^1.0.0-beta.8",
+    "@google/genai": "^0.12.0",
     "@google/generative-ai": "^0.1.3",
     "@hookform/resolvers": "^3.3.2",
     "@mistralai/mistralai": "^0.0.8",
